[tool.poetry]
name = "pincer"
version = "0.15.3"
description = "Discord API wrapper rebuild from scratch."
authors = [
    "Arthurdw <arthur@pincer.dev>",
    "Sigmanificient <sigma@pincer.dev",
]
maintainers = [
    "Lunarmagpie <lunar@pincer.dev",
    "trag1c <trag1c@pincer.dev",
    "Endercheif <endercheif@pincer.dev"
]
license = "MIT"
keywords = ["discord", "api", "asynchronous", "websockets", "aiohttp"]
homepage = "https://pincer.dev"
repository = "https://github.com/Pincer-org/Pincer"
documentation = "https://docs.pincer.dev/en/stable/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
readme = "docs/README.md"

[tool.poetry.urls]
discord = "https://discord.gg/pincer"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "~3.8.0"
# "img" extras
Pillow = { version = "9.0.0", optional = true }
# "speed" extras
orjson = { version = "^3.5.4", optional = true }
Brotli = { version = "^1.0.9", optional = true }
aiodns = { version = "^1.1", optional = true }
cchardet = { version = "^2.1.7", optional = true }

[tool.poetry.dev-dependencies]
coverage = "6.2"
flake8 = "4.0.1"
tox = "3.24.5"
pre-commit = "2.16.0"
pytest = "6.2.5"
pytest-cov = "3.0.0"
pytest-asyncio = "0.16.0"
mypy = "0.931"

[tool.poetry.extras]
img = ["Pillow"]
speed = [
    "orjson",
    "Brotli",
    "aiodns",
    "cchardet",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests", "tests/core"
]

[tool.mypy]
mypy_path = "pincer"
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 80
target-version = ['py38']
